# EDAT

./: .gitignore  Makefile.in  README.md  configure  configure.ac  sample_build.sh
.github/: README.md
.github/workflows/: ci.yml
src/: Makefile  Makefile.am  Makefile.in  binio.f90  c_qsort.c  c_sum_hp.c  c_sum_hp_interface.f90  caseconverter.f90  derivative_dp.F90  derivative_dp.f90  derivative_qp.f90  derivative_sp.f90  edat.f90  edat_binio.f90  edat_caseconverter.f90  edat_float.f90  edat_math.F90  edat_math.f90  edat_met.f90  edat_physics.f90  edat_sort.F90  edat_sort.f90  edat_statistic.f90  edat_string.F90  integral_dp.F90  integral_dp.f90  integral_qp.F90  integral_qp.f90  integral_sp.F90  integral_sp.f90  pairwise_sum.F90  pairwise_sum.f90  physics.f90  statistic.f90  string.f90  sum_hp.f90
tests/: README.md  run_tests.sh  test_binio.f90  test_edat.f90  test_extended.f90  test_float_string_sort.F90  test_math.f90  test_met_derivative.F90  test_met_integral.f90  test_negative_binio.F90  test_support.f90
